commit: Ajuste de funcionalidades da plataforma

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
           <div class="space-y-2 mb-3 flex-1">
             <div class="bg-white rounded-lg p-2.5 border border-gray-100">
-              <p class="font-semibold text-brand text-xs mb-1">⚡ Recursos Avançados</p>
+              <p class="font-semibold text-brand text-xs mb-1">Recursos Avançados</p>
               <ul class="text-xs text-gray-600 space-y-0.5">
                 <li>• Vagas ilimitadas</li>
                 <li>• IA de ponta sem limitações</li>
@@ -388,7 +388,7 @@
             </div>
 
             <div class="bg-white rounded-lg p-2.5 border border-gray-100">
-              <p class="font-semibold text-brand text-xs mb-1">🔗 Integração Completa</p>
+              <p class="font-semibold text-brand text-xs mb-1">Integração Completa</p>
               <ul class="text-xs text-gray-600 space-y-0.5">
                 <li>• API customizada e documentada</li>
                 <li>• SSO e SAML e Active Directory</li>
@@ -397,7 +397,7 @@
             </div>
 
             <div class="bg-white rounded-lg p-2.5 border border-gray-100">
-              <p class="font-semibold text-brand text-xs mb-1">🎯 Suporte Premium</p>
+              <p class="font-semibold text-brand text-xs mb-1">Suporte Premium</p>
               <ul class="text-xs text-gray-600 space-y-0.5">
                 <li>• Account Manager dedicado</li>
                 <li>• Suporte 24/7 por chat, email e telefone</li>
