--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
           em Contato</button>
       </div>
       <div class="mt-8 text-xs sm:text-sm text-gray-500 flex flex-col sm:flex-row justify-center gap-3">
-        <span class="flex items-center gap-2"><span class="w-2 h-2 bg-green-500 rounded-full"></span>Sistema
+        <span class="flex items-center justify-center gap-2"><span
+            class="w-2 h-2 bg-green-500 rounded-full"></span>Sistema
           Online</span>
         <span class="hidden sm:inline">•</span>
         <span>Segurança Corporativa</span>
