--- a/candidato.html
+++ b/candidato.html
@@ -36,27 +36,35 @@
       menu.classList.toggle('hidden');
     }
 
-    // Função para simular análise de IA
+    // Função para simular análise de IA (ATUALIZADA)
     function analyzeResume() {
       const userInput = document.getElementById('resume-input').value;
+      const fileInput = document.getElementById('file-upload');
+      const fileNameDisplay = document.getElementById('file-name');
       const responseDiv = document.getElementById('ai-response');
 
-      if (!userInput.trim()) {
+      const isTextEmpty = !userInput.trim();
+      const isFileEmpty = fileInput.files.length === 0;
+
+      if (isTextEmpty && isFileEmpty) {
         responseDiv.innerHTML = `
           <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 rounded-lg">
             <p class="text-sm text-yellow-800">
-              <strong>⚠️ Atenção:</strong> Por favor, descreva suas experiências e formações para receber sugestões personalizadas.
+              <strong>⚠️ Atenção:</strong> Por favor, descreva suas experiências ou carregue um arquivo de currículo.
             </p>
           </div>
         `;
         return;
       }
 
+      // Determina a fonte da análise para o feedback
+      const source = isFileEmpty ? 'o texto digitado' : `o arquivo "${fileNameDisplay.textContent}"`;
+
       // Simular processamento
       responseDiv.innerHTML = `
         <div class="bg-blue-50 border-l-4 border-blue-400 p-4 rounded-lg animate-pulse">
           <p class="text-sm text-blue-800">
-            <strong>🤖 Analisando...</strong> Nossa IA está processando seu currículo...
+            <strong>🤖 Analisando...</strong> Nossa IA está processando ${source}...
           </p>
         </div>
       `;
@@ -131,11 +139,37 @@
         `;
       }, 2000);
     }
+
+    // NOVO: Função para exibir o nome do arquivo selecionado
+    function handleFileUpload() {
+      const fileInput = document.getElementById('file-upload');
+      const fileNameDisplay = document.getElementById('file-name');
+      const clearFileButton = document.getElementById('clear-file');
+
+      if (fileInput.files.length > 0) {
+        const fileName = fileInput.files[0].name;
+        fileNameDisplay.textContent = fileName;
+        fileNameDisplay.classList.remove('text-gray-500', 'italic');
+        fileNameDisplay.classList.add('text-brand', 'font-semibold');
+        clearFileButton.classList.remove('hidden');
+      } else {
+        fileNameDisplay.textContent = 'Nenhum arquivo selecionado';
+        fileNameDisplay.classList.add('text-gray-500', 'italic');
+        fileNameDisplay.classList.remove('text-brand', 'font-semibold');
+        clearFileButton.classList.add('hidden');
+      }
+    }
+
+    // NOVO: Função para limpar o arquivo selecionado
+    function clearFileUpload() {
+      const fileInput = document.getElementById('file-upload');
+      fileInput.value = ''; // Limpa o input file
+      handleFileUpload(); // Atualiza o display
+    }
   </script>
 </head>
 
 <body class="bg-silver text-slate font-sans antialiased">
-  <!-- HEADER -->
   <header class="fixed top-0 left-0 right-0 bg-white/80 backdrop-blur-lg border-b border-gray-200 z-50">
     <div class="max-w-7xl mx-auto flex justify-between items-center h-16 px-6">
       <div class="flex items-center gap-3">
@@ -149,7 +183,6 @@
         </button>
       </div>
 
-      <!-- Desktop Nav -->
       <nav class="hidden md:flex items-center gap-6 text-sm text-gray-600">
         <a href="index.html" class="hover:text-brand transition">Início</a>
         <a href="#vagas" class="hover:text-brand transition">Vagas</a>
@@ -165,7 +198,6 @@
         </div>
       </nav>
 
-      <!-- Mobile Menu Button -->
       <button type="button" onclick="toggleMobileMenu()" class="md:hidden text-brand" aria-label="Menu">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -173,7 +205,6 @@
       </button>
     </div>
 
-    <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
       <nav class="flex flex-col gap-2 p-4 text-sm text-gray-600">
         <a href="index.html" class="text-left hover:text-brand py-2">Início</a>
@@ -192,7 +223,6 @@
     </div>
   </header>
 
-  <!-- WELCOME SECTION -->
   <section class="pt-24 pb-8 px-6 bg-gradient-to-b from-white to-silver">
     <div class="max-w-7xl mx-auto">
       <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4 mb-8">
@@ -222,9 +252,7 @@
         </div>
       </div>
 
-      <!-- MAIN CONTENT: PERFIL E OTIMIZAÇÃO -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 md:gap-8 mb-12">
-        <!-- CARD ESQUERDO: FORMAÇÃO E EXPERIÊNCIA -->
         <div class="bg-white rounded-2xl shadow-card">
           <div class="p-6 md:p-8 border-b border-gray-200">
             <h3 class="text-lg md:text-xl font-semibold text-brand flex items-center gap-2">
@@ -238,7 +266,6 @@
           </div>
 
           <div class="p-6 md:p-8 space-y-6 max-h-[70vh] overflow-y-auto">
-            <!-- Áreas de Atuação -->
             <div>
               <label class="block text-sm font-semibold text-brand mb-2">Áreas de Atuação</label>
               <div class="flex flex-wrap gap-2 mb-3">
@@ -251,7 +278,6 @@
                 class="w-full px-4 py-2.5 bg-white border-2 border-gray-200 rounded-lg focus:ring-2 focus:ring-gold focus:border-gold transition text-sm">
             </div>
 
-            <!-- Formação Acadêmica -->
             <div>
               <label class="block text-sm font-semibold text-brand mb-2">Formação Acadêmica</label>
               <div class="space-y-3">
@@ -268,7 +294,6 @@
                 formação</button>
             </div>
 
-            <!-- Certificações -->
             <div>
               <label class="block text-sm font-semibold text-brand mb-2">Certificações e Cursos</label>
               <div class="space-y-2">
@@ -295,7 +320,6 @@
                 certificação</button>
             </div>
 
-            <!-- Experiências -->
             <div>
               <label class="block text-sm font-semibold text-brand mb-2">Experiências Profissionais</label>
               <div class="space-y-4">
@@ -325,17 +349,15 @@
                 experiência</button>
             </div>
 
-            <!-- Botão Atualizar -->
             <div class="pt-4 sticky bottom-0 bg-white">
               <button
                 class="w-full bg-gold text-brand font-semibold py-3 px-6 rounded-lg hover:brightness-110 shadow-card hover:shadow-hover transition">
-                💾 Atualizar Informações
+                Atualizar Informações
               </button>
             </div>
           </div>
         </div>
 
-        <!-- CARD DIREITO: OTIMIZAÇÃO COM IA -->
         <div class="bg-white rounded-2xl shadow-card">
           <div class="p-6 md:p-8 border-b border-gray-200">
             <h3 class="text-lg md:text-xl font-semibold text-brand flex items-center gap-2">
@@ -346,12 +368,47 @@
               </svg>
               Otimização com IA
             </h3>
-            <p class="text-sm text-gray-600 mt-2">Descreva suas experiências e formações; nossa IA ajudará a tornar seu
-              perfil mais atrativo para recrutadores.</p>
+            <p class="text-sm text-gray-600 mt-2">Descreva suas experiências e formações ou carregue seu CV; nossa IA
+              ajudará a otimizar seu perfil.</p>
           </div>
 
           <div class="p-6 md:p-8 space-y-6">
-            <!-- Textarea de entrada -->
+            <div class="border-2 border-dashed border-gray-300 rounded-xl p-4 md:p-6 bg-silver/50">
+              <label class="block text-sm font-semibold text-brand mb-2">
+                Ou carregue seu currículo (.pdf, .docx)
+              </label>
+              <div class="flex items-center gap-3">
+                <label for="file-upload"
+                  class="flex-1 cursor-pointer bg-white text-brand font-medium py-2.5 px-4 rounded-lg border border-gray-300 hover:bg-gray-50 transition flex items-center justify-center gap-2 text-sm whitespace-nowrap overflow-hidden">
+                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path>
+                  </svg>
+                  Selecionar Arquivo
+                  <input id="file-upload" type="file" class="hidden" accept=".pdf,.doc,.docx"
+                    onchange="handleFileUpload()">
+                </label>
+
+                <div class="flex items-center flex-1 min-w-0">
+                  <span id="file-name" class="text-xs text-gray-500 italic truncate">Nenhum arquivo selecionado</span>
+                  <button id="clear-file" onclick="clearFileUpload()"
+                    class="hidden ml-2 p-1 text-gray-400 hover:text-red-500 transition flex-shrink-0"
+                    title="Remover arquivo">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                      </path>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex items-center my-4">
+              <hr class="flex-grow border-gray-200">
+              <span class="px-3 text-sm font-medium text-gray-500 bg-white">OU</span>
+              <hr class="flex-grow border-gray-200">
+            </div>
+
             <div>
               <label class="block text-sm font-semibold text-brand mb-2">Descreva seu currículo atual</label>
               <textarea id="resume-input" rows="6" md:rows="8"
@@ -359,7 +416,6 @@
                 class="w-full bg-white border-2 border-gray-200 rounded-xl px-4 py-3 text-sm focus:ring-2 focus:ring-gold focus:border-gold transition resize-none"></textarea>
             </div>
 
-            <!-- Botão de análise -->
             <button onclick="analyzeResume()"
               class="w-full bg-gradient-to-r from-green-500 to-emerald-600 text-white font-semibold py-4 px-6 rounded-xl hover:from-green-600 hover:to-emerald-700 shadow-card hover:shadow-hover transition flex items-center justify-center gap-2">
               <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -370,7 +426,6 @@
               <span class="sm:hidden">Analisar Currículo</span>
             </button>
 
-            <!-- Área de resposta da IA -->
             <div id="ai-response" class="min-h-[100px]">
               <div
                 class="bg-gradient-to-br from-silver to-gray-100 p-6 rounded-2xl border-2 border-dashed border-gray-300">
@@ -382,12 +437,11 @@
                     </path>
                   </svg>
                   <p class="text-sm font-medium">As sugestões da IA aparecerão aqui</p>
-                  <p class="text-xs mt-1">Preencha o campo acima e clique em "Analisar"</p>
+                  <p class="text-xs mt-1">Preencha o campo acima ou envie seu currículo e clique em "Analisar"</p>
                 </div>
               </div>
             </div>
 
-            <!-- Dica de uso -->
             <div class="bg-blue-50 border-l-4 border-blue-400 p-4 rounded-lg">
               <div class="flex items-start gap-3">
                 <svg class="w-5 h-5 text-blue-600 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
@@ -406,7 +460,6 @@
         </div>
       </div>
 
-      <!-- STATS CARDS -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6 mb-12">
         <div class="bg-white rounded-2xl p-6 shadow-card hover:shadow-hover transition">
           <div class="flex items-center justify-between mb-3">
@@ -475,7 +528,6 @@
         </div>
       </div>
 
-      <!-- VAGAS RECOMENDADAS -->
       <div class="bg-white rounded-2xl shadow-card mb-12">
         <div class="p-6 md:p-8 border-b border-gray-200">
           <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
@@ -486,7 +538,6 @@
 
         <div class="p-6 md:p-8">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <!-- Vaga 1 -->
             <div class="border-2 border-gray-200 rounded-2xl p-6 hover:border-green-500 hover:shadow-hover transition">
               <div class="flex flex-col gap-3 mb-4">
                 <div>
@@ -516,7 +567,6 @@
               </div>
             </div>
 
-            <!-- Vaga 2 -->
             <div class="border-2 border-gray-200 rounded-2xl p-6 hover:border-blue-500 hover:shadow-hover transition">
               <div class="flex flex-col gap-3 mb-4">
                 <div>
@@ -551,7 +601,6 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="bg-brand text-gray-300 py-12 mt-16">
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row md:justify-between gap-8">
       <div>
