--- a/recrutador.html
+++ b/recrutador.html
@@ -136,10 +136,33 @@
       }, 2000);
     }
 
-    // Função para mostrar detalhes da vaga
-    function showJobDetails(jobTitle) {
-      alert('Visualizando detalhes da vaga: ' + jobTitle + '\n\n(Funcionalidade completa será implementada com o backend)');
+    // NOVO: JOB DETAILS modal (Substitui a função showJobDetails antiga)
+    function openJobDetailsModal(title, dept, manager, candidates, interviews, status) {
+      // 1. Preenche os dados no modal
+      document.getElementById('modal-job-title').textContent = title;
+      document.getElementById('modal-job-dept').textContent = dept;
+      document.getElementById('modal-job-manager').textContent = manager;
+      document.getElementById('modal-job-candidates').textContent = candidates;
+      document.getElementById('modal-job-interviews').textContent = interviews;
+      document.getElementById('modal-job-status').textContent = status;
+
+      // Atualiza a descrição simulada
+      const descTitleEl = document.getElementById('modal-job-desc-title');
+      if (descTitleEl) {
+        descTitleEl.textContent = title;
+      }
+
+      // 2. Exibe o modal
+      document.getElementById('job-details-modal').classList.remove('hidden');
     }
+
+    function closeJobDetailsModal() {
+      // Oculta o modal
+      document.getElementById('job-details-modal').classList.add('hidden');
+    }
+
+    // Inicializar gráfico quando o DOM estiver carregado
+    document.addEventListener('DOMContentLoaded', initRecruitmentChart);
 
     // Função para inicializar o gráfico de métricas
     function initRecruitmentChart() {
@@ -252,13 +275,18 @@
       });
     }
 
-    // Inicializar gráfico quando o DOM estiver carregado
-    document.addEventListener('DOMContentLoaded', initRecruitmentChart);
+    // Fechar modais com ESC
+    document.addEventListener('keydown', function (e) {
+      if (e.key === 'Escape') {
+        closeScheduleModal();
+        closeJobDetailsModal(); // Adicionado para fechar o novo modal
+      }
+    });
+
   </script>
 </head>
 
 <body class="bg-silver text-slate font-sans antialiased">
-  <!-- HEADER -->
   <header class="fixed top-0 left-0 right-0 bg-white/80 backdrop-blur-lg border-b border-gray-200 z-50">
     <div class="max-w-7xl mx-auto flex justify-between items-center h-16 px-6">
       <div class="flex items-center gap-3">
@@ -272,7 +300,6 @@
         </button>
       </div>
 
-      <!-- Desktop Nav -->
       <nav class="hidden md:flex items-center gap-6 text-sm text-gray-600">
         <a href="index.html" class="hover:text-brand transition">Início</a>
         <a href="#dashboard" class="text-brand font-semibold">Dashboard</a>
@@ -289,7 +316,6 @@
         </div>
       </nav>
 
-      <!-- Mobile Menu Button -->
       <button type="button" onclick="toggleMobileMenu()" class="md:hidden text-brand" aria-label="Menu">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -297,7 +323,6 @@
       </button>
     </div>
 
-    <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
       <nav class="flex flex-col gap-2 p-4 text-sm text-gray-600">
         <a href="index.html" class="text-left hover:text-brand py-2">Início</a>
@@ -317,7 +342,6 @@
     </div>
   </header>
 
-  <!-- WELCOME SECTION -->
   <section class="pt-24 pb-8 px-6 bg-gradient-to-b from-white to-silver">
     <div class="max-w-7xl mx-auto">
       <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4 mb-8">
@@ -342,7 +366,6 @@
         </div>
       </div>
 
-      <!-- STATS CARDS -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6 mb-12">
         <div class="bg-white rounded-2xl p-6 shadow-card hover:shadow-hover transition">
           <div class="flex items-center justify-between mb-3">
@@ -410,7 +433,6 @@
         </div>
       </div>
 
-      <!-- VAGAS EM ANDAMENTO -->
       <div class="mb-12">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4 mb-6">
           <h3 class="text-2xl font-bold text-brand">Vagas em Andamento</h3>
@@ -424,7 +446,6 @@
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
-          <!-- Vaga 1 -->
           <div class="bg-white rounded-2xl p-6 shadow-card hover:shadow-hover transition">
             <h3 class="text-lg font-semibold text-brand mb-1">Analista de Dados Sênior</h3>
             <p class="text-sm text-gray-600 mb-3">Departamento de Tecnologia</p>
@@ -441,13 +462,19 @@
                 <span class="font-semibold text-brand">3 agendadas</span>
               </div>
             </div>
-            <button onclick="showJobDetails('Analista de Dados Sênior')"
+            <button onclick="openJobDetailsModal(
+                'Analista de Dados Sênior', 
+                'Departamento de Tecnologia', 
+                'Maria Silva', 
+                '15', 
+                '3 agendadas', 
+                'Em andamento'
+            )"
               class="w-full bg-gold text-brand px-4 py-2.5 rounded-lg text-sm font-semibold hover:brightness-110 shadow-card hover:shadow-hover transition">
               Ver Detalhes
             </button>
           </div>
 
-          <!-- Vaga 2 -->
           <div class="bg-white rounded-2xl p-6 shadow-card hover:shadow-hover transition">
             <h3 class="text-lg font-semibold text-brand mb-1">Desenvolvedor Full Stack</h3>
             <p class="text-sm text-gray-600 mb-3">Departamento de Produto</p>
@@ -464,13 +491,19 @@
                 <span class="font-semibold text-brand">5 realizadas</span>
               </div>
             </div>
-            <button onclick="showJobDetails('Desenvolvedor Full Stack')"
+            <button onclick="openJobDetailsModal(
+                'Desenvolvedor Full Stack', 
+                'Departamento de Produto', 
+                'João Silva', 
+                '22', 
+                '5 realizadas', 
+                'Em entrevista'
+            )"
               class="w-full bg-gold text-brand px-4 py-2.5 rounded-lg text-sm font-semibold hover:brightness-110 shadow-card hover:shadow-hover transition">
               Ver Detalhes
             </button>
           </div>
 
-          <!-- Vaga 3 -->
           <div class="bg-white rounded-2xl p-6 shadow-card hover:shadow-hover transition">
             <h3 class="text-lg font-semibold text-brand mb-1">DevOps Engineer</h3>
             <p class="text-sm text-gray-600 mb-3">Departamento de Infraestrutura</p>
@@ -488,7 +521,14 @@
                 <span class="font-semibold text-brand">0 agendadas</span>
               </div>
             </div>
-            <button onclick="showJobDetails('DevOps Engineer')"
+            <button onclick="openJobDetailsModal(
+                'DevOps Engineer', 
+                'Departamento de Infraestrutura', 
+                'Carlos Mendes', 
+                '8', 
+                '0 agendadas', 
+                'Em análise'
+            )"
               class="w-full bg-gold text-brand px-4 py-2.5 rounded-lg text-sm font-semibold hover:brightness-110 shadow-card hover:shadow-hover transition">
               Ver Detalhes
             </button>
@@ -496,7 +536,6 @@
         </div>
       </div>
 
-      <!-- CANDIDATOS RECOMENDADOS PELA IA -->
       <div class="bg-white rounded-2xl shadow-card mb-12">
         <div class="p-6 md:p-8 border-b border-gray-200">
           <div class="flex flex-col gap-2">
@@ -515,7 +554,6 @@
 
         <div class="p-6 md:p-8 overflow-x-auto">
           <ul class="divide-y divide-gray-200 space-y-4 md:space-y-0">
-            <!-- Candidato 1 -->
             <li
               class="py-4 md:py-5 flex flex-col md:flex-row md:justify-between md:items-center gap-4 hover:bg-silver/50 px-4 -mx-4 rounded-lg transition">
               <div class="flex items-center gap-4 flex-1 min-w-0">
@@ -539,7 +577,6 @@
               </button>
             </li>
 
-            <!-- Candidato 2 -->
             <li
               class="py-4 md:py-5 flex flex-col md:flex-row md:justify-between md:items-center gap-4 hover:bg-silver/50 px-4 -mx-4 rounded-lg transition">
               <div class="flex items-center gap-4 flex-1 min-w-0">
@@ -563,7 +600,6 @@
               </button>
             </li>
 
-            <!-- Candidato 3 -->
             <li
               class="py-4 md:py-5 flex flex-col md:flex-row md:justify-between md:items-center gap-4 hover:bg-silver/50 px-4 -mx-4 rounded-lg transition">
               <div class="flex items-center gap-4 flex-1 min-w-0">
@@ -587,7 +623,6 @@
               </button>
             </li>
 
-            <!-- Candidato 4 -->
             <li
               class="py-4 md:py-5 flex flex-col md:flex-row md:justify-between md:items-center gap-4 hover:bg-silver/50 px-4 -mx-4 rounded-lg transition">
               <div class="flex items-center gap-4 flex-1 min-w-0">
@@ -611,7 +646,6 @@
               </button>
             </li>
 
-            <!-- Candidato 5 -->
             <li
               class="py-4 md:py-5 flex flex-col md:flex-row md:justify-between md:items-center gap-4 hover:bg-silver/50 px-4 -mx-4 rounded-lg transition">
               <div class="flex items-center gap-4 flex-1 min-w-0">
@@ -638,9 +672,7 @@
         </div>
       </div>
 
-      <!-- PAINEL DE MÉTRICAS -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 md:gap-8 mb-12">
-        <!-- Métricas de Recrutamento -->
         <div class="bg-white rounded-2xl p-6 md:p-8 shadow-card hover:shadow-hover transition">
           <h4 class="text-lg md:text-xl font-bold text-brand mb-6 flex items-center gap-2">
             <svg class="w-6 h-6 text-gold" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -650,7 +682,6 @@
             </svg>
             Métricas de Recrutamento
           </h4>
-
           <div
             class="h-48 md:h-64 bg-gradient-to-br from-gold/20 via-brand/10 to-silver rounded-2xl p-4 shadow-inner mb-6 w-full">
             <canvas id="recruitmentChart"></canvas>
@@ -668,7 +699,6 @@
           </div>
         </div>
 
-        <!-- Taxa de Sucesso por Área -->
         <div class="bg-white rounded-2xl p-6 md:p-8 shadow-card hover:shadow-hover transition">
           <h4 class="text-lg md:text-xl font-bold text-brand mb-6 flex items-center gap-2">
             <svg class="w-6 h-6 text-gold" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -743,7 +773,6 @@
     </div>
   </section>
 
-  <!-- MODAL DE AGENDAMENTO -->
   <div id="schedule-modal"
     class="hidden fixed inset-0 bg-black/50 backdrop-blur-sm z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-2xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto">
@@ -794,7 +823,68 @@
     </div>
   </div>
 
-  <!-- FOOTER -->
+  <div id="job-details-modal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/50 p-4">
+    <div class="bg-white rounded-2xl w-full max-w-2xl p-6 shadow-2xl max-h-screen overflow-y-auto">
+      <div class="flex items-center justify-between mb-4">
+        <h3 class="text-xl font-bold text-brand" id="modal-job-title">Detalhes da Vaga</h3>
+        <button onclick="closeJobDetailsModal()" class="text-gray-500 hover:text-gray-700"
+          aria-label="Fechar detalhes da vaga">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
+
+      <div class="space-y-4 text-gray-700">
+        <div>
+          <p class="font-semibold text-sm text-gray-500">Departamento:</p>
+          <p class="text-base" id="modal-job-dept">Departamento Genérico</p>
+        </div>
+        <div>
+          <p class="font-semibold text-sm text-gray-500">Gestor Responsável:</p>
+          <p class="text-base" id="modal-job-manager">Gestor Padrão</p>
+        </div>
+        <hr class="border-gray-200">
+        <div>
+          <p class="font-semibold text-sm text-brand mb-1">Status e Números</p>
+          <div class="grid grid-cols-3 gap-4 text-center">
+            <div class="p-3 bg-silver rounded-lg">
+              <p class="text-lg font-bold text-brand" id="modal-job-candidates">0</p>
+              <p class="text-xs text-gray-600">Candidatos</p>
+            </div>
+            <div class="p-3 bg-silver rounded-lg">
+              <p class="text-lg font-bold text-brand" id="modal-job-interviews">0</p>
+              <p class="text-xs text-gray-600">Entrevistas Agendadas</p>
+            </div>
+            <div class="p-3 bg-silver rounded-lg">
+              <p class="text-lg font-bold text-brand" id="modal-job-status">Aberto</p>
+              <p class="text-xs text-gray-600">Status</p>
+            </div>
+          </div>
+        </div>
+        <hr class="border-gray-200">
+        <div>
+          <p class="font-semibold text-sm text-brand mb-1">Descrição da Vaga (Simulada)</p>
+          <div class="prose max-w-none text-sm space-y-2">
+            <p>Esta é uma descrição detalhada e simulada para a vaga de <span class="font-bold"
+                id="modal-job-desc-title">Vaga Selecionada</span>.</p>
+            <p>O profissional será responsável por tarefas específicas da área. Os detalhes completos estão disponíveis
+              no painel de pipeline de recrutamento.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-6 flex justify-end">
+        <button
+          onclick="alert('Funcionalidade completa de pipeline ainda será implementada no backend, como avisado anteriormente.')"
+          class="bg-brand text-white font-semibold py-2.5 px-6 rounded-lg hover:brightness-110 transition text-sm">
+          Ir para o Pipeline Completo
+        </button>
+      </div>
+    </div>
+  </div>
+
+
   <footer class="bg-brand text-gray-300 py-12 mt-16">
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row md:justify-between gap-8">
       <div>
