--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Talent Portal — Luxo Institucional</title>
+  <title>Talent Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/talentportal.png" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
